[package]
name = "mirai_db_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.16.0"
url = "2.2.2"
serde_json = "1.0"
serde = { version = "1.0.133", features = ["derive"]}
mysql = "22.0.0"
strfmt = "0.1.6"
